--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
   <body>
     <div class="container">
       <div class="nav-bar">
-        <img src="images/logo.png" alt="Company Logo" />
-        <div class="nav-items">
+        <img src="images/logo.png" class="logo" alt="Company Logo" />
+        <nav class="nav-items">
           <ul>
             <li><a href="">Home</a></li>
             <li><a href="">About</a></li>
             <li><a href="">Collections</a></li>
             <li><a href="">Category</a></li>
           </ul>
-        </div>
+        </nav>
       </div>
       <div class="cart-image">
         <img src="images/cart.png" alt="cart" />
