progress made on main content

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
           </ul>
         </nav>
       </div>
-      <div class="cart-image">
-        <img src="images/cart.png" alt="cart" />
-      </div>
+      <!-- CART IMAGE -->
+      <img class="cart-image" src="images/cart.png" alt="cart" />
+      <!-- MAIN CONTENT -->
       <div class="main-content">
         <a href="">2023 Collection</a>
         <h1>You Should Always Feel Pretty</h1>
