--- a/index.html
+++ b/index.html
@@ -23,15 +23,15 @@
       <img class="cart-image" src="images/cart.png" alt="cart" />
       <!-- MAIN CONTENT -->
       <div class="main-content">
-        <a href="">2023 Collection</a>
+        <a class="btn" href="">2023 Collection</a>
         <h1>You Should Always Feel Pretty</h1>
         <p>Clothes that are sure to heat up your winter</p>
       </div>
-      <div class="arrows">
+      <div class="arrow-icon">
         <img src="images/back-arrow.png" alt="" />
         <img src="images/next-arrow.png" alt="" />
       </div>
-      <img src="images/img.png" alt="" />
+      <img class="feature-img" src="images/img.png" alt="" />
       <div class="social-icons">
         <img src="images/facebook.png" alt="facebook" />
         <img src="images/instagram.png" alt="instagram" />
